adjusted jump-btn, relevant to only app container. set fixed height to html tag

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -27,6 +27,12 @@ $box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
   0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
   0 100px 80px rgba(0, 0, 0, 0.12);
 
+html,
+body {
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
+}
 body {
   background-color: $primary-bg-color;
   background-image: url("../imgs/bg.jpg");
